--- a/index.css
+++ b/index.css
@@ -10,14 +10,23 @@
 #wrap-center {
   width: 1280px;
   background-color: yellow;
-  display: inline-block;
 }
 
 #header-hamburger {
   margin-top: 18px;
+  display: inline-block;
+  padding: 10px;
+  background: none;
+  border: none;
+}
+
+#header-hamburger > div {
   background-image: url('./sp_main.png');
-  width: 46px;
-  height: 46px;
+  width: 26px;
+  height: 26px;
+  background-repeat: no-repeat;
+  background-size: 422px 405px;
+  background-position: -335px -284px;
 }
 
 #main {
