--- a/index.css
+++ b/index.css
@@ -14,9 +14,14 @@
 }
 
 #header-hamburger {
-  background-image: url('./sp_main.png');
+  margin-top: 18px;
+  display: line-block;
+}
+
+#header-hamburger > div {
   width: 26px;
   height: 26px;
+  background-image: url('./sp_main.png');
   background-repeat: no-repeat;
   background-size: 422px 405px;
   background-position: -335px -284px;
